# GameDisplay

./: CMakeLists.txt  README.md  WindowDisplayCapture.cap
Source/: CMakeLists.txt  SimpleCapture.cpp  SimpleCapture.h  capture.interop.h  composition.interop.h  d3dHelpers.h  direct3d11.interop.h  main.cpp  shaders,shader
